--- a/ecommerce/templates/ecommerce/checkout.html
+++ b/ecommerce/templates/ecommerce/checkout.html
@@ -5,66 +5,144 @@
 {% block main_content %}
 
 <div class="max-w-6xl mx-auto flex flex-wrap items-start py-6 px-6 xl:px-0">
-	<form action="{% url 'ecommerce:place_order' %}" method="POST">
-		{% csrf_token %}
-		<div class="products w-full md:w-3/4 lg:w-3/4 xl:w-3/4">
-			<h1 class="mb-5 text-3xl">Checkout</h1>
-		
-			<div class="w-full pr-6">
-				<div class="mb-6 p-6 bg-gray-100 rounded-xl">
-					<h2 class="mb-5 uppercase text-lg">Shipping Information</h2>
-					<div class="flex space-x-6">
-						<div class="w-1/2 mb-4">
-							<label class="inline-block mb-2">First Name</label>
-							<input name="first_name" type="text" class="w-full p-5 rounded-xl bg-gray-50" value="{{ request.user.first_name }}">
-						</div>
-						<div class="w-1/2 mb-4">
-							<label class="inline-block mb-2">Last Name</label>
-							<input name="last_name" type="text" class="w-full p-5 rounded-xl bg-gray-50" value="{{ request.user.last_name }}">
-						</div>
+	<div class="products w-full md:w-3/4 lg:w-3/4 xl:w-3/4">
+		<h1 class="mb-5 text-3xl">Checkout</h1>
+	
+		<div class="w-full pr-6">
+			<div class="mb-6 p-6 bg-gray-100 rounded-xl">
+				<h2 class="mb-5 uppercase text-lg">Shipping Information</h2>
+				<div class="flex space-x-6">
+					<div class="w-1/2 mb-4">
+						<label class="inline-block mb-2">First Name</label>
+						<input name="first_name" type="text" class="w-full p-5 rounded-xl bg-gray-50" value="{{ request.user.first_name }}">
 					</div>
-					<div class="mb-4">
-						<label class="inline-block mb-2">Address</label>
-						<input name="address" type="text" class="w-full p-5 rounded-xl bg-gray-50">
-					</div>
-					<div class="flex space-x-6">
-						<div class="w-1/2 mb-4">
-							<label class="inline-block mb-2">Zip Code</label>
-							<input name="zip_code" type="text" class="w-full p-5 rounded-xl bg-gray-50">
-						</div>
-						<div class="w-1/2 mb-4">
-							<label class="inline-block mb-2">City/Place</label>
-							<input name="place" type="text" class="w-full p-5 rounded-xl bg-gray-50">
-						</div>
+					<div class="w-1/2 mb-4">
+						<label class="inline-block mb-2">Last Name</label>
+						<input name="last_name" type="text" class="w-full p-5 rounded-xl bg-gray-50" value="{{ request.user.last_name }}">
 					</div>
 				</div>
-				<div class="mb-6 p-6 bg-gray-100 rounded-xl">
-					<h2 class="mb-5 uppercase text-lg">Contact Information</h2>
-					<div class="flex space-x-6">
-						<div class="w-1/2 mb-4">
-							<label class="inline-block mb-2">Email</label>
-							<input name="email" type="email" class="w-full p-5 rounded-xl bg-gray-50"  value="{{ request.user.email }}">
-						</div>
-						<div class="w-1/2 mb-4">
-							<label class="inline-block mb-2">Phone Number</label>
-							<input name="phone" type="phone" class="w-full p-5 rounded-xl bg-gray-50">
-						</div>
-					</div>
+				<div class="mb-4">
+					<label class="inline-block mb-2">Address</label>
+					<input name="address" type="text" class="w-full p-5 rounded-xl bg-gray-50">
 				</div>
-				<div class="mb-6 p-6 bg-gray-100 rounded-xl">
-					<h2 class="mb-5 uppercase text-lg">Payment Information</h2>
+				<div class="flex space-x-6">
+					<div class="w-1/2 mb-4">
+						<label class="inline-block mb-2">Zip Code</label>
+						<input name="zip_code" type="text" class="w-full p-5 rounded-xl bg-gray-50">
+					</div>
+					<div class="w-1/2 mb-4">
+						<label class="inline-block mb-2">City/Place</label>
+						<input name="place" type="text" class="w-full p-5 rounded-xl bg-gray-50">
+					</div>
 				</div>
 			</div>
-		</div>
-		<div class="summary w-full md:w-1/4 lg:w-1/4 xl:w-1/4 p-6 bg-gray-100 rounded-xl mt-3">
-			<h2 class="uppercase text-lg mb-5">summary</h2>
-			<div class="mb-6 flex justify-between">
-				<span class="font-semibold">Total</span>
-				<span>$ {{ cart.get_total_price }}</span>
+			<div class="mb-6 p-6 bg-gray-100 rounded-xl">
+				<h2 class="mb-5 uppercase text-lg">Contact Information</h2>
+				<div class="flex space-x-6">
+					<div class="w-1/2 mb-4">
+						<label class="inline-block mb-2">Email</label>
+						<input name="email" type="email" class="w-full p-5 rounded-xl bg-gray-50"  value="{{ request.user.email }}">
+					</div>
+					<div class="w-1/2 mb-4">
+						<label class="inline-block mb-2">Phone Number</label>
+						<input name="phone" type="phone" class="w-full p-5 rounded-xl bg-gray-50">
+					</div>
+				</div>
 			</div>
-			<button class="inline-block w-full px-8 py-4 text-center rounded-xl text-white bg-purple-500 hover:bg-purple-700">Confirm Checkout</button>
+			<div class="mb-6 p-6 bg-gray-100 rounded-xl">
+				<h2 class="mb-5 uppercase text-lg">Payment Information</h2>
+			</div>
 		</div>
-	</form>
+	</div>
+	<div class="summary w-full md:w-1/4 lg:w-1/4 xl:w-1/4 p-6 bg-gray-100 rounded-xl mt-3">
+		<h2 class="uppercase text-lg mb-5">summary</h2>
+		<div class="mb-6 flex justify-between">
+			<span class="font-semibold">Total</span>
+			<span>$ {{ cart.get_total_price }}</span>
+		</div>
+		<button onclick="buy(event)" class="inline-block w-full px-8 py-4 text-center rounded-xl text-white bg-purple-500 hover:bg-purple-700">Confirm Checkout</button>
+	</div>
 </div>
 
 {% endblock main_content %}
+
+{% block extra_scripts %}
+	<script type="application/javascript" src="https://js.stripe.com/v3/"></script>
+	<script>
+		function validateForm(data) {
+			let errors = []
+
+			if (data.first_name === '') {
+				errors.push('First Name is required!')
+			}
+			if (data.last_name === '') {
+				errors.push('Last Name is required!')
+			}
+			if (data.address === '') {
+				errors.push('Address is required!')
+			}
+			if (data.zip_code === '') {
+				errors.push('Zip Code is required!')
+			}
+			if (data.place === '') {
+				errors.push('Place/City is required!')
+			}
+			if (data.email === '') {
+				errors.push('Email is required!')
+			}
+			if (data.phone === '') {
+				errors.push('Phone Number is required!')
+			}
+
+			return errors
+		}
+		
+		function buy(event) {
+			event.preventDefault()
+
+			let data = {
+				"first_name": document.querySelector("input[name=first_name]").value,
+				"last_name": document.querySelector("input[name=last_name]").value,
+				"address": document.querySelector("input[name=address]").value,
+				"zip_code": document.querySelector("input[name=zip_code]").value,
+				"place": document.querySelector("input[name=place]").value,
+				"email": document.querySelector("input[name=email]").value,
+				"phone": document.querySelector("input[name=phone]").value,
+			}
+
+			let errors = validateForm(data)
+
+			if (errors.length) {
+				console.log('Errors', errors)
+			} else {
+				var stripe = Stripe("{{ pub_key }}")
+
+				fetch('/place_order/', {
+					method: "POST",
+					headers: {
+						"Content_Type": "application/json",
+						"X-CSRFToken": "{{ csrf_token }}",
+					},
+					credentials: "same-origin",
+					body: JSON.stringify(data)
+				})
+				.then((response) => {
+					return response.json()
+				})
+				.then((session) => {
+					return stripe.redirectToCheckout({sessionId: session.session.id})
+				})
+				.then((result) => {
+					if (result.error) {
+						alert(result.error.message)
+					}
+				})
+				.catch((error) => {
+					console.log("Errors", error)
+				})
+			}
+
+			return false
+		}
+	</script>
+{% endblock extra_scripts %}
